--- a/src/main/resources/static/error/500.html
+++ b/src/main/resources/static/error/500.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>IoTセンサーロガーシステム</title>
+    <title>IoTセンサーロガーシステム : サーバーエラー</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.4/css/bulma.min.css">
 </head>
@@ -16,17 +16,11 @@
                 <h1 class="title is-1">IoTセンサーロガーシステム</h1>
                 <h2 class="subtitle is-4">IoT Sensor Logger System</h2>
             </div>
-        </section>
-
-        <section class="section">
-            <div class="content">
-                <ul>
-                    <li><a href="/sensor/temperature">温度計測結果の表示</a></li>
-                    <li><a href="/sensor/humidity">湿度測定結果の表示</a></li>
-                    <li><a href="/sensor/pressure">気圧測定結果の表示</a></li>
-                </ul>
-                <img src="/img/graph/2025-10-09.png" alt="Temperature Chart">
-            </div>
+            <p class="notification is-danger">
+                <span class="has-text-weight-bold">500 - サーバーエラー</span><br>
+                サーバーでエラーが発生しました。しばらくしてから再度お試しください。
+            </p>
+            <a href="/" class="button is-link">ホームに戻る</a>
         </section>
     </div>
 </body>
