--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,33 +1,32 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
 
 <head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>IoTセンサーロガーシステム</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.4/css/bulma.min.css">
+  <meta charset="UTF-8">
+  <title>IoTセンサーロガーシステム</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.4/css/bulma.min.css">
 </head>
 
 <body>
-    <div class="container">
-        <section class="section">
-            <div class="content">
-                <h1 class="title is-1">IoTセンサーロガーシステム</h1>
-                <h2 class="subtitle is-4">IoT Sensor Logger System</h2>
-            </div>
-        </section>
+  <div class="container">
+    <section class="section">
+      <div class="content">
+        <h1 class="title is-1">IoTセンサーロガーシステム</h1>
+        <h2 class="subtitle is-4">IoT Sensor Logger System</h2>
+      </div>
+    </section>
 
-        <section class="section">
-            <div class="content">
-                <ul>
-                    <li><a href="/sensor/temperature">温度計測結果の表示</a></li>
-                    <li><a href="/sensor/humidity">湿度測定結果の表示</a></li>
-                    <li><a href="/sensor/pressure">気圧測定結果の表示</a></li>
-                </ul>
-            </div>
-        </section>
-    </div>
+    <section class="section">
+      <div class="content">
+        <ul>
+          <li><a href="/sensor/temperature">温度計測結果の表示</a></li>
+          <li><a href="/sensor/humidity">湿度測定結果の表示</a></li>
+          <li><a href="/sensor/pressure">気圧測定結果の表示</a></li>
+        </ul>
+      </div>
+    </section>
+  </div>
 </body>
 
 </html>
